# CspDiscordRpcGd

./: .gitignore  .gitmodules  CMakeLists.txt  CompileGodotCpp.ps1  LICENSE  README.md  README_ja-JP.md  README_zh-TW.md  export_presets.cfg  project.godot
.codex/skills/godot-cpp-guide/: SKILL.md
.github/: FUNDING.yml
Extensions/CspDiscordRpcGdCpp/: .gitignore  CMakeLists.txt
Extensions/CspDiscordRpcGdCpp/CMake/: BuildDefaults.cmake  EmbeddedSvgResources.cmake  GodotExtension.cmake
Extensions/CspDiscordRpcGdCpp/Source/: CspDiscordRpcGdCppFunctionLibrary.cpp  CspDiscordRpcGdCppFunctionLibrary.h  CspDiscordRpcGdCppMainControl.cpp  CspDiscordRpcGdCppMainControl.h  CspDiscordRpcGdCppWorkItem.cpp  CspDiscordRpcService.cpp  RegisterTypes.cpp
Extensions/CspDiscordRpcGdCpp/Source/Main/: CspDiscordRpcGdCppFunctionLibrary.h  CspDiscordRpcGdCppMainControl.cpp  CspDiscordRpcGdCppWorkData.h  CspDiscordRpcGdCppWorksWindow.cpp  CspDiscordRpcGdCppWorksWindow.h
Resources/Scenes/: MainScene.tscn
Resources/Scripts/: MainScene.gd  MainScene.gd.uid
Source/Main/: CspDiscordRpcGdCppCloseWindow.cpp  CspDiscordRpcGdCppCloseWindow.h  CspDiscordRpcGdCppConstants.h  CspDiscordRpcGdCppFunctionLibrary.cpp  CspDiscordRpcGdCppMainControl.cpp  CspDiscordRpcGdCppMainControl.h  CspDiscordRpcGdCppWorkItem.cpp  CspDiscordRpcGdCppWorkItem.h  CspDiscordRpcGdCppWorksWindow.cpp  CspDiscordRpcGdCppWorksWindow.h  CspDiscordRpcService.cpp  CspDiscordRpcService.h  RegisterTypes.cpp
